--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/hemang249/wunder-checkout#readme",
   "dependencies": {
+    "@types/table": "^6.3.2",
+    "table": "^6.8.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   },
