--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "test": "jest"
+    "test": "jest --silent",
+    "test:watch": "jest --watch --silent"
   },
   "repository": {
     "type": "git",
