--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "wunder-checkout",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A checkout system to add products, apply promotional offers and print the final bill",
   "main": "index.js",
   "scripts": {
+    "start": "npm run build && node dist/index.js",
     "dev": "ts-node-dev src/index.ts",
     "test": "jest --silent",
-    "test:watch": "jest --watch --silent"
+    "test:watch": "jest --watch --silent",
+    "build": "tsc --build"
+
   },
   "repository": {
     "type": "git",
